# demucs.onnx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demucs-for-onnx/demucs/: apply.py  htdemucs.py
scripts/: build-ort-linux.sh  convert-model-to-ort.sh  convert-pth-to-onnx.py  fetch-onnxruntime-release.py  requirements.txt
src/: demucs.hpp  dsp.cpp  dsp.hpp  model_apply.cpp  model_inference.cpp  tensor.hpp
src_cli/: CMakeLists.txt  demucs.cpp
